--- a/thietbianninh/html/index.html
+++ b/thietbianninh/html/index.html
@@ -56,7 +56,7 @@
                         <div class="col-md-2 col-xs-12 top-logo">
                             <img src="images/top-logo.png">
                         </div>
-                        <div class="col-md-8 col-xs-12 top-policy">
+                        <div class="col-md-7 col-xs-12 top-policy">
 
                             <div class="col-md-3 col-xs-6 box_content">
                                 <a href="/page/cam-ket-chinh-hang"><i class="icon icon_camket"></i>
@@ -74,6 +74,20 @@
                                 <a href="/page/cam-ket-chinh-hang"><i class="icon icon_doitra"></i>
                                 <span class="services_text">Đổi trả hàng trong 7 ngày</span></a>
                             </div>
+                        </div>
+                        <div class="col-md-3 col-xs-12 top-support">
+                            <div class="box_support">
+                                <span class="title_support">Hotline CSKH</span>
+                                <ul class="list_support">
+                                    <li>
+                                        <strong> 0965.098.053 </strong>
+                                        <strong> 0166.717.5016</strong>
+
+                                    </li>
+                                </ul>
+                                <i class="icon icon_support"></i>
+                            </div>
+
                         </div>
                     </div>
                 </div>
